# chainlit-huggingface

./: .gitignore  Makefile  pyproject.toml
data/: sales_data_sample.csv
src/: app.py
src/database/: query_handler.py
src/model/: query_generator.py  query_interpreter.py
src/models/: huggingface_chainlit.py
src/utils/: csv_to_pg.py  db_schema.json  helpers.py  log.py
test/: huggingface_test.py
