[project]
name = "projeto-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.0.5",
    "openai>=1.59.7",
    "protobuf==3.20.3",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.9.2",
    "simpy>=4.1.1",
    "sqlalchemy>=2.0.37",
    "sympy>=1.13.1",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "uvicorn>=0.34.0",
]
[tool.taskipy.tasks]
start = "src/app.py"

model = "chainlit run src/models/huggingface_chainlit.py"

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "taskipy>=1.14.1",
]
