[project]
name = "projeto-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.1.0",
    "crewai-tools>=0.33.0",
    "langchain>=0.3.17",
    "openai>=1.60.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.37",
]
[tool.taskipy.tasks]
start = "chainlit run src/app.py"

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "taskipy>=1.14.1",
]
